# zk-example-pedersen

./: .travis.yml  Cargo.toml  README.md  run.sh
examples/: groth16.rs  marlin.rs
src/: api.rs  groth_api.rs  lib.rs  main.rs  marlin.rs  marlin_api.rs  pedersen.rs  r1cs.rs
