[package]
name = "pedersen_example"
version = "0.1.0"
authors = ["zhenfeizhang <zhenfei.zhang@hotmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { git = "https://github.com/zhenfeizhang/zexe/", features = ["asm", "bls12_381", "ed_on_bls12_381"]}
algebra-core = { git = "https://github.com/zhenfeizhang/zexe/", features = ["llvm_asm"]}
crypto-primitives = { git = "https://github.com/zhenfeizhang/zexe/" }

rand_chacha = "0.2.2"
rand = "0.7.3"
rand_xorshift = { version = "0.2" }

groth16 = { git = "https://github.com/zhenfeizhang/zexe/"}#, optional = true, default-features = false }

r1cs-core = { git = "https://github.com/zhenfeizhang/zexe/", features = ["std"] }
r1cs-std = { git = "https://github.com/zhenfeizhang/zexe/", features = ["ed_on_bls12_381"] }
