[package]
name = "pedersen_example"
version = "0.1.0"
authors = ["zhenfeizhang <zhenfei.zhang@hotmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.2.2"
rand = "0.7.3"
rand_xorshift = { version = "0.2" }

ark-groth16 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { version = "0.2.0", default-features = false }
ark-relations = { version = "0.2.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "0.2.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.2.0", branch = "main", features = [ "r1cs" ] }
ark-ff = { version = "0.2.0", default-features = false, features = [ "asm" ] }
ark-marlin = { version = "0.2.0",  default-features = false }
ark-poly = { version = "0.2.0", default-features = false }
ark-poly-commit = { version = "0.2.0", default-features = false }

blake2 = { version = "0.9", default-features = false }